# LearnMiniCAD

./: CMakeLists.txt  README.md
source/Lesson001-Win32/App/: MainWindow.cpp  MainWindow.h
source/Lesson002-InitD3D11/App/: Main.cpp
source/Lesson002-InitD3D11/Render/D3D11/: Renderer.cpp  Renderer.h
source/Lesson003-Viewport/: ErrorReporter.h
source/Lesson003-Viewport/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson003-Viewport/Interfaces/: IInputHandler.h  IViewContext.h
source/Lesson003-Viewport/Render/D3D11/: Renderer.cpp  Renderer.h
source/Lesson003-Viewport/Render/Extraction/: RenderExtractor.cpp  RenderExtractor.h
source/Lesson003-Viewport/Render/Resources/: RenderPreview.h
source/Lesson003-Viewport/Render/Viewport/: Viewport.cpp
source/Lesson004-Renderer/App/: Main.cpp
source/Lesson004-Renderer/Render/D3D11/: Device.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
source/Lesson004-Renderer/Render/Viewport/: Camera.cpp  Camera.h  Viewport.cpp  Viewport.h
source/Lesson004-Shader/App/: Main.cpp
source/Lesson005-Core/: FractalGeometryGenerator.hpp  Main.cpp
source/Lesson005-Core/App/: Main.cpp  MainWindow.h
source/Lesson005-Core/Core/Entity/: ArcEntity.hpp  Entity.hpp  LineEntity.hpp
source/Lesson005-Core/Core/GeomKernel/: Arc.hpp  Circle.hpp  Line.hpp
source/Lesson005-Core/Interfaces/: ISceneReader.h
source/Lesson005-Core/Render/D3D11/: Renderer.h  SwapChain.cpp
source/Lesson005-Core/Render/Extraction/: RenderExtractor.cpp
source/Lesson006-Scene/: Main.cpp
source/Lesson006-Scene/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson006-Scene/Core/: ISerializer.h  RuntimeType.hpp
source/Lesson007-Input/: Main.cpp
source/Lesson007-Input/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson008-CommandStack/App/: Main.cpp  MainWindow.cpp
source/Lesson009-Editor/: pch.h
source/Lesson009-Editor/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson009-Editor/Extraction/: ISceneReader.h
source/Lesson009-Editor/Interfaces/: ISceneReader.h
source/Lesson010-Document/App/: MainWindow.cpp  MainWindow.h
source/Lesson011-Command/: pch.h
source/Lesson011-Command/App/: Main.cpp
source/Lesson011-Command/Extraction/: ISceneReader.h  SceneExtractor.cpp  SceneExtractor.h
source/Lesson011-Tools/: FractalGeometryGenerator.hpp
source/Lesson011-Tools/App/: Main.cpp  MainWindow.h
source/Lesson012-Preview/App/: Main.cpp  MainWindow.cpp
source/Lesson012-Preview/Extraction/: SceneExtractor.cpp
source/Lesson013-Picking/App/: Main.cpp
source/Lesson013-Picking/Extraction/: SceneExtractor.h
source/Lesson013-Picking/Serialization/: BinarySerializer.h
source/Lesson014-ViewState/App/: Main.cpp  MainWindow.cpp
source/Lesson014-ViewState/Extraction/: ISceneReader.h  SceneExtractor.cpp
source/Lesson014-ViewState/Render/: ViewState.h
source/Lesson015-RenderPass/App/: Main.cpp
source/Lesson015-RenderPass/Render/: ViewState.h
source/Lesson015-RenderPass/Serialization/: AsciiSerializer.h
source/Lesson016-Cursor/App/: Main.cpp
source/Lesson016-Cursor/Render/: ViewState.h
source/Lesson016-Grip/App/: Main.cpp
source/Lesson016-Grip/Render/: ViewState.h
source/Lesson017-Snap/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson017-Snap/Render/: ViewState.h
source/Lesson018-Drag/App/: Main.cpp  MainWindow.cpp
source/Lesson019-Constraint/App/: Main.cpp
source/Lesson019-Constraint/Core/: ISerializer.h
source/Lesson019-Constraint/Extraction/: SceneExtractor.h
source/Lesson020-ImGui/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson021-Widgets/: pch.h
source/Lesson021-Widgets/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson021-Widgets/Extraction/: SceneExtractor.cpp
source/Lesson022-End/App/: MainWindow.cpp  MainWindow.h
source/Lesson022-Finish/App/: Main.cpp  MainWindow.cpp  MainWindow.h
source/Lesson022-Finish/Render/: ViewState.h
source/Lesson101-OffScreenRendering/: main.cpp
source/Lesson102-ImGuiImage/: main.cpp
source/Lesson103-ImGuiViewport/: main.cpp
source/Lesson104-ImGuiDemo/: main.cpp
source/Lessson001-Win32/App/: Main.cpp
source/MiniCAD/App/: MainWindow.cpp  MainWindow.h
(+331 files in other folders)
